Discription and Layout alignment issue fixed

--- a/blocks/title-with-margin/title-with-margin.css
+++ b/blocks/title-with-margin/title-with-margin.css
@@ -1,3 +1,7 @@
 .title-with-margin .title-with-margin-config {
   display: none;
 }
+
+.title-with-margin .title-with-margin-description {
+  margin: 0;
+}
